--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 tmp/
-_old/
-_backup/
-Thumbs. db/
-.DS_Store/
+*.old ←
+*.backup ←
+1.2. Site For Import/Thumbs.db ← 
+1.2. Site For Import/.DS_Store ←
 
