--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 tmp/
-*_.old ←
-*_.backup ←
-1.2. Site For Import/Thumbs.db ← 
-1.2. Site For Import/.DS_Store ←
+*.old ←
+*.backup ←
+Thumbs.db ← 
+.DS_Store ←
 
